src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    END
    EXIT

Grammar

Rule 0     S' -> statement_list
Rule 1     statement_list -> statement statement_list
Rule 2     statement_list -> empty
Rule 3     empty -> <empty>
Rule 4     statement -> IMPORT STRING SEMICOLON
Rule 5     statement -> assignment SEMICOLON
Rule 6     statement -> conditional
Rule 7     statement -> expr SEMICOLON
Rule 8     statement -> macro_def
Rule 9     statement -> macro_call
Rule 10    assignment -> l_value EQUAL r_value
Rule 11    statement -> loop
Rule 12    loop -> WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
Rule 13    statement -> fun_def
Rule 14    fun_def -> FUN ID LPAREN id_list RPAREN LBRACE statement_list RBRACE
Rule 15    statement -> RETURN expr SEMICOLON
Rule 16    id_list -> ID
Rule 17    id_list -> ID COMMA id_list
Rule 18    id_list -> empty
Rule 19    conditional -> IF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif conditional_else
Rule 20    conditional_elif -> ELIF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif
Rule 21    conditional_elif -> empty
Rule 22    conditional_else -> ELSE LBRACE statement_list RBRACE
Rule 23    conditional_else -> empty
Rule 24    r_value -> expr
Rule 25    l_value -> ID
Rule 26    l_value -> ID fields
Rule 27    l_value -> PLACEHOLDER
Rule 28    l_value -> PLACEHOLDER fields
Rule 29    fields -> LBRACKET expr RBRACKET
Rule 30    fields -> LBRACKET expr RBRACKET fields
Rule 31    expr -> alg_op
Rule 32    expr -> STRING
Rule 33    expr -> NUMBER
Rule 34    expr -> BOOL
Rule 35    expr -> NULL
Rule 36    expr -> func_call
Rule 37    expr -> ID
Rule 38    expr -> LPAREN expr RPAREN
Rule 39    func_call -> ID LPAREN arg_list RPAREN
Rule 40    arg_list -> empty
Rule 41    arg_list -> expr
Rule 42    arg_list -> expr COMMA arg_list
Rule 43    alg_op -> expr PLUS expr
Rule 44    alg_op -> expr MINUS expr
Rule 45    alg_op -> expr MULTIPLY expr
Rule 46    alg_op -> expr DIVIDE expr
Rule 47    expr -> LBRACKET arg_list RBRACKET
Rule 48    expr -> LBRACE record_list RBRACE
Rule 49    expr -> LPAREN statement_list RPAREN
Rule 50    record_list -> ID COLON expr
Rule 51    record_list -> ID COLON expr COMMA record_list
Rule 52    record_list -> empty
Rule 53    expr -> expr LBRACKET expr RBRACKET
Rule 54    expr -> comp_op
Rule 55    expr -> PLACEHOLDER
Rule 56    comp_op -> expr EQUAL EQUAL expr
Rule 57    comp_op -> expr BANG EQUAL expr
Rule 58    comp_op -> expr GT expr
Rule 59    comp_op -> expr GT EQUAL expr
Rule 60    comp_op -> expr LT expr
Rule 61    comp_op -> expr LT EQUAL expr
Rule 62    expr -> log_op
Rule 63    log_op -> expr AND expr
Rule 64    log_op -> expr OR expr
Rule 65    log_op -> NOT expr
Rule 66    macro_def -> MAC macro_def_arg_list LBRACE statement_list RBRACE
Rule 67    macro_def_arg_list -> ATOM macro_def_arg_list_rec
Rule 68    macro_def_arg_list_rec -> PLACEHOLDER macro_def_arg_list_rec
Rule 69    macro_def_arg_list_rec -> ATOM macro_def_arg_list_rec
Rule 70    macro_def_arg_list_rec -> empty
Rule 71    macro_call -> ATOM macro_arg_list SEMICOLON
Rule 72    macro_arg_list -> ATOM macro_arg_list
Rule 73    macro_arg_list -> expr macro_arg_list
Rule 74    macro_arg_list -> empty

Terminals, with rules where they appear

AND                  : 63
ATOM                 : 67 69 71 72
BANG                 : 57
BOOL                 : 34
COLON                : 50 51
COMMA                : 17 42 51
DIVIDE               : 46
ELIF                 : 20
ELSE                 : 22
END                  : 
EQUAL                : 10 56 56 57 59 61
EXIT                 : 
FUN                  : 14
GT                   : 58 59
ID                   : 14 16 17 25 26 37 39 50 51
IF                   : 19
IMPORT               : 4
LBRACE               : 12 14 19 20 22 48 66
LBRACKET             : 29 30 47 53
LPAREN               : 12 14 19 20 38 39 49
LT                   : 60 61
MAC                  : 66
MINUS                : 44
MULTIPLY             : 45
NOT                  : 65
NULL                 : 35
NUMBER               : 33
OR                   : 64
PLACEHOLDER          : 27 28 55 68
PLUS                 : 43
RBRACE               : 12 14 19 20 22 48 66
RBRACKET             : 29 30 47 53
RETURN               : 15
RPAREN               : 12 14 19 20 38 39 49
SEMICOLON            : 4 5 7 15 71
STRING               : 4 32
WHILE                : 12
error                : 

Nonterminals, with rules where they appear

alg_op               : 31
arg_list             : 39 42 47
assignment           : 5
comp_op              : 54
conditional          : 6
conditional_elif     : 19 20
conditional_else     : 19
empty                : 2 18 21 23 40 52 70 74
expr                 : 7 12 15 19 20 24 29 30 38 41 42 43 43 44 44 45 45 46 46 50 51 53 53 56 56 57 57 58 58 59 59 60 60 61 61 63 63 64 64 65 73
fields               : 26 28 30
fun_def              : 13
func_call            : 36
id_list              : 14 17
l_value              : 10
log_op               : 62
loop                 : 11
macro_arg_list       : 71 72 73
macro_call           : 9
macro_def            : 8
macro_def_arg_list   : 66
macro_def_arg_list_rec : 67 68 69
r_value              : 10
record_list          : 48 51
statement            : 1
statement_list       : 1 12 14 19 20 22 49 66 0

Parsing method: LALR

state 0

    (0) S' -> . statement_list
    (1) statement_list -> . statement statement_list
    (2) statement_list -> . empty
    (4) statement -> . IMPORT STRING SEMICOLON
    (5) statement -> . assignment SEMICOLON
    (6) statement -> . conditional
    (7) statement -> . expr SEMICOLON
    (8) statement -> . macro_def
    (9) statement -> . macro_call
    (11) statement -> . loop
    (13) statement -> . fun_def
    (15) statement -> . RETURN expr SEMICOLON
    (3) empty -> .
    (10) assignment -> . l_value EQUAL r_value
    (19) conditional -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif conditional_else
    (31) expr -> . alg_op
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . BOOL
    (35) expr -> . NULL
    (36) expr -> . func_call
    (37) expr -> . ID
    (38) expr -> . LPAREN expr RPAREN
    (47) expr -> . LBRACKET arg_list RBRACKET
    (48) expr -> . LBRACE record_list RBRACE
    (49) expr -> . LPAREN statement_list RPAREN
    (53) expr -> . expr LBRACKET expr RBRACKET
    (54) expr -> . comp_op
    (55) expr -> . PLACEHOLDER
    (62) expr -> . log_op
    (66) macro_def -> . MAC macro_def_arg_list LBRACE statement_list RBRACE
    (71) macro_call -> . ATOM macro_arg_list SEMICOLON
    (12) loop -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
    (14) fun_def -> . FUN ID LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (25) l_value -> . ID
    (26) l_value -> . ID fields
    (27) l_value -> . PLACEHOLDER
    (28) l_value -> . PLACEHOLDER fields
    (43) alg_op -> . expr PLUS expr
    (44) alg_op -> . expr MINUS expr
    (45) alg_op -> . expr MULTIPLY expr
    (46) alg_op -> . expr DIVIDE expr
    (39) func_call -> . ID LPAREN arg_list RPAREN
    (56) comp_op -> . expr EQUAL EQUAL expr
    (57) comp_op -> . expr BANG EQUAL expr
    (58) comp_op -> . expr GT expr
    (59) comp_op -> . expr GT EQUAL expr
    (60) comp_op -> . expr LT expr
    (61) comp_op -> . expr LT EQUAL expr
    (63) log_op -> . expr AND expr
    (64) log_op -> . expr OR expr
    (65) log_op -> . NOT expr

    IMPORT          shift and go to state 4
    RETURN          shift and go to state 13
    $end            reduce using rule 3 (empty -> .)
    IF              shift and go to state 15
    STRING          shift and go to state 5
    NUMBER          shift and go to state 19
    BOOL            shift and go to state 20
    NULL            shift and go to state 21
    ID              shift and go to state 23
    LPAREN          shift and go to state 16
    LBRACKET        shift and go to state 24
    LBRACE          shift and go to state 17
    PLACEHOLDER     shift and go to state 26
    MAC             shift and go to state 28
    ATOM            shift and go to state 29
    WHILE           shift and go to state 30
    FUN             shift and go to state 31
    NOT             shift and go to state 32

    statement_list                 shift and go to state 1
    statement                      shift and go to state 2
    empty                          shift and go to state 3
    assignment                     shift and go to state 6
    conditional                    shift and go to state 7
    expr                           shift and go to state 8
    macro_def                      shift and go to state 9
    macro_call                     shift and go to state 10
    loop                           shift and go to state 11
    fun_def                        shift and go to state 12
    l_value                        shift and go to state 14
    alg_op                         shift and go to state 18
    func_call                      shift and go to state 22
    comp_op                        shift and go to state 25
    log_op                         shift and go to state 27

state 1

    (0) S' -> statement_list .



state 2

    (1) statement_list -> statement . statement_list
    (1) statement_list -> . statement statement_list
    (2) statement_list -> . empty
    (4) statement -> . IMPORT STRING SEMICOLON
    (5) statement -> . assignment SEMICOLON
    (6) statement -> . conditional
    (7) statement -> . expr SEMICOLON
    (8) statement -> . macro_def
    (9) statement -> . macro_call
    (11) statement -> . loop
    (13) statement -> . fun_def
    (15) statement -> . RETURN expr SEMICOLON
    (3) empty -> .
    (10) assignment -> . l_value EQUAL r_value
    (19) conditional -> . IF LPAREN expr RPAREN LBRACE statement_list RBRACE conditional_elif conditional_else
    (31) expr -> . alg_op
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . BOOL
    (35) expr -> . NULL
    (36) expr -> . func_call
    (37) expr -> . ID
    (38) expr -> . LPAREN expr RPAREN
    (47) expr -> . LBRACKET arg_list RBRACKET
    (48) expr -> . LBRACE record_list RBRACE
    (49) expr -> . LPAREN statement_list RPAREN
    (53) expr -> . expr LBRACKET expr RBRACKET
    (54) expr -> . comp_op
    (55) expr -> . PLACEHOLDER
    (62) expr -> . log_op
    (66) macro_def -> . MAC macro_def_arg_list LBRACE statement_list RBRACE
    (71) macro_call -> . ATOM macro_arg_list SEMICOLON
    (12) loop -> . WHILE LPAREN expr RPAREN LBRACE statement_list RBRACE
    (14) fun_def -> . FUN ID LPAREN id_list RPAREN LBRACE statement_list RBRACE
    (25) l_value -> . ID
    (26) l_value -> . ID fields
    (27) l_value -> . PLACEHOLDER
    (28) l_value -> . PLACEHOLDER fields
    (43) alg_op -> . expr PLUS expr
    (44) alg_op -> . expr MINUS expr
    (45) alg_op -> . expr MULTIPLY expr
    (46) alg_op -> . expr DIVIDE expr
    (39) func_call -> . ID LPAREN arg_list RPAREN
    (56) comp_op -> . expr EQUAL EQUAL expr
    (57) comp_op -> . expr BANG EQUAL expr
    (58) comp_op -> . expr GT expr
    (59) comp_op -> . expr GT EQUAL expr
    (60) comp_op -> . expr LT expr
    (61) comp_op -> . expr LT EQUAL expr
    (63) log_op -> . expr AND expr
    (64) log_op -> . expr OR expr
    (65) log_op -> . NOT expr

    IMPORT          shift and go to state 4
    RETURN          shift and go to state 13
    $end            reduce using rule 3 (empty -> .)
    RPAREN          reduce using rule 3 (empty -> .)
    RBRACE          reduce using rule 3 (empty -> .)
    IF              shift and go to state 15
    STRING          shift and go to state 5
    NUMBER          shift and go to state 19
    BOOL            shift and go to state 20
    NULL            shift and go to state 21
    ID              shift and go to state 23
    LPAREN          shift and go to state 16
    LBRACKET        shift and go to state 24
    LBRACE          shift and go to state 17
    PLACEHOLDER     shift and go to state 26
    MAC             shift and go to state 28
    ATOM            shift and go to state 29
    WHILE           shift and go to state 30
    FUN             shift and go to state 31
    NOT             shift and go to state 32

    statement                      shift and go to state 2
    statement_list                 shift and go to state 33
    empty                          shift and go to state 3
    assignment                     shift and go to state 6
    conditional                    shift and go to state 7
    expr                           shift and go to state 8
    macro_def                      shift and go to state 9
    macro_call                     shift and go to state 10
    loop                           shift and go to state 11
    fun_def                        shift and go to state 12
    l_value                        shift and go to state 14
    alg_op                         shift and go to state 18
    func_call                      shift and go to state 22
    comp_op                        shift and go to state 25
    log_op                         shift and go to state 27

state 3

    (2) statement_list -> empty .

    $end            reduce using rule 2 (statement_list -> empty .)
    RPAREN          reduce using rule 2 (statement_list -> empty .)
    RBRACE          reduce using rule 2 (statement_list -> empty .)


state 4

    (4) statement -> IMPORT . STRING SEMICOLON

    STRING          shift and go to state 34


state 5

    (32) expr -> STRING .

    SEMICOLON       reduce using rule 32 (expr -> STRING .)
    LBRACKET        reduce using rule 32 (expr -> STRING .)
    PLUS            reduce using rule 32 (expr -> STRING .)
    MINUS           reduce using rule 32 (expr -> STRING .)
    MULTIPLY        reduce using rule 32 (expr -> STRING .)
    DIVIDE          reduce using rule 32 (expr -> STRING .)
    EQUAL           reduce using rule 32 (expr -> STRING .)
    BANG            reduce using rule 32 (expr -> STRING .)
    GT              reduce using rule 32 (expr -> STRING .)
    LT              reduce using rule 32 (expr -> STRING .)
    AND             reduce using rule 32 (expr -> STRING .)
    OR              reduce using rule 32 (expr -> STRING .)
    RPAREN          reduce using rule 32 (expr -> STRING .)
    COMMA           reduce using rule 32 (expr -> STRING .)
    RBRACKET        reduce using rule 32 (expr -> STRING .)
    ATOM            reduce using rule 32 (expr -> STRING .)
    STRING          reduce using rule 32 (expr -> STRING .)
    NUMBER          reduce using rule 32 (expr -> STRING .)
    BOOL            reduce using rule 32 (expr -> STRING .)
    NULL            reduce using rule 32 (expr -> STRING .)
    ID              reduce using rule 32 (expr -> STRING .)
    LPAREN          reduce using rule 32 (expr -> STRING .)
    LBRACE          reduce using rule 32 (expr -> STRING .)
    PLACEHOLDER     reduce using rule 32 (expr -> STRING .)
    NOT             reduce using rule 32 (expr -> STRING .)
    RBRACE          reduce using rule 32 (expr -> STRING .)


state 6

    (5) statement -> assignment . SEMICOLON

    SEMICOLON       shift and go to state 35


state 7

    (6) statement -> conditional .

    IMPORT          reduce using rule 6 (statement -> conditional .)
    RETURN          reduce using rule 6 (statement -> conditional .)
    IF              reduce using rule 6 (statement -> conditional .)
    STRING          reduce using rule 6 (statement -> conditional .)
    NUMBER          reduce using rule 6 (statement -> conditional .)
    BOOL            reduce using rule 6 (statement -> conditional .)
    NULL            reduce using rule 6 (statement -> conditional .)
    ID              reduce using rule 6 (statement -> conditional .)
    LPAREN          reduce using rule 6 (statement -> conditional .)
    LBRACKET        reduce using rule 6 (statement -> conditional .)
    LBRACE          reduce using rule 6 (statement -> conditional .)
    PLACEHOLDER     reduce using rule 6 (statement -> conditional .)
    MAC             reduce using rule 6 (statement -> conditional .)
    ATOM            reduce using rule 6 (statement -> conditional .)
    WHILE           reduce using rule 6 (statement -> conditional .)
    FUN             reduce using rule 6 (statement -> conditional .)
    NOT             reduce using rule 6 (statement -> conditional .)
    $end            reduce using rule 6 (statement -> conditional .)
    RPAREN          reduce using rule 6 (statement -> conditional .)
    RBRACE          reduce using rule 6 (statement -> conditional .)


state 8

    (7) statement -> expr . SEMICOLON
    (53) expr -> expr . LBRACKET expr RBRACKET
    (43) alg_op -> expr . PLUS expr
    (44) alg_op -> expr . MINUS expr
    (45) alg_op -> expr . MULTIPLY expr
    (46) alg_op -> expr . DIVIDE expr
    (56) comp_op -> expr . EQUAL EQUAL expr
    (57) comp_op -> expr . BANG EQUAL expr
    (58) comp_op -> expr . GT expr
    (59) comp_op -> expr . GT EQUAL expr
    (60) comp_op -> expr . LT expr
    (61) comp_op -> expr . LT EQUAL expr
    (63) log_op -> expr . AND expr
    (64) log_op -> expr . OR expr

    SEMICOLON       shift and go to state 36
    LBRACKET        shift and go to state 37
    PLUS            shift and go to state 38
    MINUS           shift and go to state 39
    MULTIPLY        shift and go to state 40
    DIVIDE          shift and go to state 41
    EQUAL           shift and go to state 42
    BANG            shift and go to state 43
    GT              shift and go to state 44
    LT              shift and go to state 45
    AND             shift and go to state 46
    OR              shift and go to state 47


state 9

    (8) statement -> macro_def .

    IMPORT          reduce using rule 8 (statement -> macro_def .)
    RETURN          reduce using rule 8 (statement -> macro_def .)
    IF              reduce using rule 8 (statement -> macro_def .)
    STRING          reduce using rule 8 (statement -> macro_def .)
    NUMBER          reduce using rule 8 (statement -> macro_def .)
    BOOL            reduce using rule 8 (statement -> macro_def .)
    NULL            reduce using rule 8 (statement -> macro_def .)
    ID              reduce using rule 8 (statement -> macro_def .)
    LPAREN          reduce using rule 8 (statement -> macro_def .)
    LBRACKET        reduce using rule 8 (statement -> macro_def .)
    LBRACE          reduce using rule 8 (statement -> macro_def .)
    PLACEHOLDER     reduce using rule 8 (statement -> macro_def .)
    MAC             reduce using rule 8 (statement -> macro_def .)
    ATOM            reduce using rule 8 (statement -> macro_def .)
    WHILE           reduce using rule 8 (statement -> macro_def .)
    FUN             reduce using rule 8 (statement -> macro_def .)
    NOT             reduce using rule 8 (statement -> macro_def .)
    $end            reduce using rule 8 (statement -> macro_def .)
    RPAREN          reduce using rule 8 (statement -> macro_def .)
    RBRACE          reduce using rule 8 (statement -> macro_def .)


state 10

    (9) statement -> macro_call .

    IMPORT          reduce using rule 9 (statement -> macro_call .)
    RETURN          reduce using rule 9 (statement -> macro_call .)
    IF              reduce using rule 9 (statement -> macro_call .)
    STRING          reduce using rule 9 (statement -> macro_call .)
    NUMBER          reduce using rule 9 (statement -> macro_call .)
    BOOL            reduce using rule 9 (statement -> macro_call .)
    NULL            reduce using rule 9 (statement -> macro_call .)
    ID              reduce using rule 9 (statement -> macro_call .)
    LPAREN          reduce using rule 9 (statement -> macro_call .)
    LBRACKET        reduce using rule 9 (statement -> macro_call .)
    LBRACE          reduce using rule 9 (statement -> macro_call .)
    PLACEHOLDER     reduce using rule 9 (statement -> macro_call .)
    MAC             reduce using rule 9 (statement -> macro_call .)
    ATOM            reduce using rule 9 (statement -> macro_call .)
    WHILE           reduce using rule 9 (statement -> macro_call .)
    FUN             reduce using rule 9 (statement -> macro_call .)
    NOT             reduce using rule 9 (statement -> macro_call .)
    $end            reduce using rule 9 (statement -> macro_call .)
    RPAREN          reduce using rule 9 (statement -> macro_call .)
    RBRACE          reduce using rule 9 (statement -> macro_call .)


state 11

    (11) statement -> loop .

    IMPORT          reduce using rule 11 (statement -> loop .)
    RETURN          reduce using rule 11 (statement -> loop .)
    IF              reduce using rule 11 (statement -> loop .)
    STRING          reduce using rule 11 (statement -> loop .)
    NUMBER          reduce using rule 11 (statement -> loop .)
    BOOL            reduce using rule 11 (statement -> loop .)
    NULL            reduce using rule 11 (statement -> loop .)
    ID              reduce using rule 11 (statement -> loop .)
    LPAREN          reduce using rule 11 (statement -> loop .)
    LBRACKET        reduce using rule 11 (statement -> loop .)
    LBRACE          reduce using rule 11 (statement -> loop .)
    PLACEHOLDER     reduce using rule 11 (statement -> loop .)
    MAC             reduce using rule 11 (statement -> loop .)
    ATOM            reduce using rule 11 (statement -> loop .)
    WHILE           reduce using rule 11 (statement -> loop .)
    FUN             reduce using rule 11 (statement -> loop .)
    NOT             reduce using rule 11 (statement -> loop .)
    $end            reduce using rule 11 (statement -> loop .)
    RPAREN          reduce using rule 11 (statement -> loop .)
    RBRACE          reduce using rule 11 (statement -> loop .)


state 12

    (13) statement -> fun_def .

    IMPORT          reduce using rule 13 (statement -> fun_def .)
    RETURN          reduce using rule 13 (statement -> fun_def .)
    IF              reduce using rule 13 (statement -> fun_def .)
    STRING          reduce using rule 13 (statement -> fun_def .)
    NUMBER          reduce using rule 13 (statement -> fun_def .)
    BOOL            reduce using rule 13 (statement -> fun_def .)
    NULL            reduce using rule 13 (statement -> fun_def .)
    ID              reduce using rule 13 (statement -> fun_def .)
    LPAREN          reduce using rule 13 (statement -> fun_def .)
    LBRACKET        reduce using rule 13 (statement -> fun_def .)
    LBRACE          reduce using rule 13 (statement -> fun_def .)
    PLACEHOLDER     reduce using rule 13 (statement -> fun_def .)
    MAC             reduce using rule 13 (statement -> fun_def .)
    ATOM            reduce using rule 13 (statement -> fun_def .)
    WHILE           reduce using rule 13 (statement -> fun_def .)
    FUN             reduce using rule 13 (statement -> fun_def .)
    NOT             reduce using rule 13 (statement -> fun_def .)
    $end            reduce using rule 13 (statement -> fun_def .)
    RPAREN          reduce using rule 13 (statement -> fun_def .)
    RBRACE          reduce using rule 13 (statement -> fun_def .)


state 13

    (15) statement -> RETURN . expr SEMICOLON
    (31) expr -> . alg_op
    (32) expr -> . STRING
    (33) expr -> . NUMBER
    (34) expr -> . BOOL
    (35) expr -> . NULL
    (36) expr -> . func_call
    (37) expr -> . ID
    (38) expr -> . LPAREN expr RPAREN
    (47) expr -> . LBRACKET arg_list RBRACKET
    (48) expr -> . LBRACE record_list RBRACE
    (49) expr -> . LPAREN statement_list RPAREN
    (53) expr -> . expr LBRACKET expr RBRACKET
    (54) expr -> . comp_op
    (55) expr -> . PLACEHOLDER
    (62) expr -> . log_op
    (43) alg_op -> . expr PLUS expr
    (44) alg_op -> . expr MINUS expr
    (45) alg_op -> . expr MULTIPLY expr
    (46) alg_op -> . expr DIVIDE expr
    (39) func_call -> . ID LPAREN arg_list RPAREN
    (56) comp_op -> . expr EQUAL EQUAL expr
    (57) comp_op -> . expr BANG EQUAL expr
    (58) comp_op -> . expr GT expr
    (59) comp_op -> . expr GT EQUAL expr
    (60) comp_op -> . expr LT expr
    (61) comp_op -> . expr LT EQUAL expr
    (63) log_op -> . expr AND expr
    (64) log_op -> . expr OR expr
    (65) log_op -> . NOT expr

    STRING          shift and go to state 5
    NUMBER          shift and go to state 19
    BOOL            shift and go to state 20
    NULL            shift and go to state 21
    ID              shift and go to state 49
    LPAREN          shift and go to state 16
    LBRACKET        shift and go to state 24
    LBRACE          shift and go to state 17
    PLACEHOLDER     shift and go to state 50
    NOT             shift and go to state 32
